| Summary: | ASTERISK-26228: res_pjsip_sdp_rtp: G729A does not include annexb=no attribute. | ||
| Reporter: | Ali Ghavidel (alibirif) | Labels: | |
| Date Opened: | 2016-07-22 16:13:21 | Date Closed: | 2016-08-19 11:06:07 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_sdp_rtp |
| Versions: | 13.9.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) res_format_attr_g729.c | |
| Description: | fmtp:18 annexb=no is missed in the default setting of the SDP in the pjsip trunk. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-07-22 16:13:21.963-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Jason Parker (jparker) 2016-07-29 11:57:22 I have no idea whether this code works, but I believe this is how this is supposed to be done. Rusty, et al: Don't consider this a patch submission yet - I know better. I'll eventually get around to putting it through Gerrit. | ||